# lightfall-endstation-7011

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-26-endstation-user-support.md  2026-05-26-reflection-alignment.md  2026-06-05-xpcs-panel.md
docs/superpowers/specs/: 2026-05-26-endstation-user-support-design.md  2026-05-26-reflection-alignment-design.md  2026-06-05-xpcs-lightfall-port-design.md
src/lightfall_endstation_7011/: __init__.py  manifest.py
src/lightfall_endstation_7011/alignment/: __init__.py  skill.py
src/lightfall_endstation_7011/devices/: __init__.py  diode.py  lakeshore.py  motor.py  pimte3.py
src/lightfall_endstation_7011/observers/blackfly/: __init__.py  camera.py  discovery.py  gvsp.py  skill.py
src/lightfall_endstation_7011/observers/blackfly/references/: panel_template.py
src/lightfall_endstation_7011/observers/blackfly/scripts/: discover.py
src/lightfall_endstation_7011/pipelines/: NEXT_STEPS.md  __init__.py  variance.py
src/lightfall_endstation_7011/pipelines/notebooks/: __init__.py  compute_variance.ipynb
src/lightfall_endstation_7011/support/: skill.py
src/lightfall_endstation_7011/support/references/: detector_no_signal.md
src/lightfall_endstation_7011/widgets/: __init__.py  andor.py  diode.py  pimte.py
src/lightfall_endstation_7011/xpcs/: binding.py  client.py  panel.py  plots.py  plugin.py  roi_overlay.py  shapes.py  spinner_toggle.py
src/lucid_endstation_7011/: __init__.py  manifest.py
src/lucid_endstation_7011/alignment/: convergence.py  fitting.py  skill.py
src/lucid_endstation_7011/devices/: __init__.py  andor.py  pimte3.py
src/lucid_endstation_7011/observers/: __init__.py
src/lucid_endstation_7011/observers/blackfly/: camera.py  gvcp.py  gvcp_transport.py  pixel_formats.py  registers.py  skill.py
src/lucid_endstation_7011/observers/blackfly/references/: panel_template.py
src/lucid_endstation_7011/observers/blackfly/scripts/: discover.py
src/lucid_endstation_7011/pipelines/: __init__.py
src/lucid_endstation_7011/pipelines/notebooks/: __init__.py  compute_variance.ipynb
src/lucid_endstation_7011/support/: skill.py
src/lucid_endstation_7011/support/references/: detector_no_signal.md
src/lucid_endstation_7011/widgets/: __init__.py  andor.py  diode.py  pimte.py
tests/alignment/: test_convergence.py  test_fitting.py  test_skill.py  test_tools.py
tests/observers/blackfly/: conftest.py  test_camera_live.py  test_discovery.py  test_gvcp.py  test_gvcp_transport.py  test_gvsp.py  test_pixel_formats.py  test_registers.py  test_skill.py
tests/observers/research/: blackfly_s_registers.txt
tests/pipelines/: test_variance.py
tests/support/: test_skill.py
tests/xpcs/: conftest.py  test_binding.py  test_client.py  test_panel.py  test_plots.py  test_plugin.py  test_roi_overlay.py  test_shapes.py  test_spinner_toggle.py
